[project]
name = "snowflake-v-databricks"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "colorlog>=6.10.1",
    "cryptography>=46.0.3",
    "databricks-cli>=0.18.0",
    "databricks-sdk>=0.73.0",
    "databricks-sql-connector>=3.0.1",
    "dbt-duckdb>=1.10.0",
    "duckdb>=1.4.1",
    "matplotlib>=3.10.7",
    "numpy<2",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "python-dotenv>=1.2.1",
    "snowflake-connector-python>=4.0.0",
    "streamlit>=1.51.0",
    "toml>=0.10.2",
    "tomli>=2.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
